opam-version: "2.0"
maintainer: "Dave Scott <dave@recoil.org>"
authors: ["Anil Madhavapeddy" "Dave Scott" "Richard Mortier"]
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-pcap"
doc: "https://mirage.github.io/ocaml-pcap/"
bug-reports: "https://github.com/mirage/ocaml-pcap/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.0"}
  "cstruct" {>= "1.9.0"}
  "ppx_cstruct" {> "0"}
  "ounit2" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-pcap.git"
synopsis: "Decode and encode PCAP (packet capture) files"
description: """
pcap-format provides an interface to encode and decode pcap files, dealing with
both endianess, including endianess detection.
"""
